// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar component tests should render correctly 1`] = `
<div
  className="ui stackable menu"
>
  <Link
    className="header item"
    to="/"
  >
    Home
  </Link>
  <div
    className="right menu"
  >
    <Link
      className="item"
      to="/register"
    >
      Register
    </Link>
    <Link
      className="item"
      to="/login"
    >
      Login
    </Link>
  </div>
</div>
`;

exports[`NavBar component tests shoulder render log in and logout if not logged in 1`] = `
<div
  className="ui stackable menu"
>
  <Link
    className="header item"
    to="/"
  >
    Home
  </Link>
  <div
    className="right menu"
  >
    <Link
      className="item"
      to="/register"
    >
      Register
    </Link>
    <Link
      className="item"
      to="/login"
    >
      Login
    </Link>
  </div>
</div>
`;

exports[`NavBar component tests shoulder render logout if logged in 1`] = `
<div
  className="ui stackable menu"
>
  <Link
    className="header item"
    to="/"
  >
    Home
  </Link>
  <div
    className="right menu"
  >
    <Link
      className="item"
      to="/secret"
    >
      Secret
    </Link>
    <a
      className="item"
      href="/"
      id="logout"
      onClick={[Function]}
    >
      Logout
    </a>
  </div>
</div>
`;
